--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -4,7 +4,7 @@ upstream django {
 
 server {
     listen 80;
-    server_name svcdesk.barokahdigital.cloud www.svcdesk.barokahdigital.cloud;
+    server_name tsm.barokahdigital.cloud www.tsm.barokahdigital.cloud;
     client_max_body_size 100M;
 
     # Health check endpoint (keep HTTP for container health checks)
@@ -22,11 +22,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name svcdesk.barokahdigital.cloud www.svcdesk.barokahdigital.cloud;
+    server_name tsm.barokahdigital.cloud www.tsm.barokahdigital.cloud;
     client_max_body_size 100M;
 
-    ssl_certificate /etc/nginx/ssl/live/svcdesk.barokahdigital.cloud/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/svcdesk.barokahdigital.cloud/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/tsm.barokahdigital.cloud/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/tsm.barokahdigital.cloud/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
@@ -39,6 +39,10 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "DENY" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Frontend (Vite build)
+    root /app/frontend;
+    index index.html;
 
     # Static files
     location /static/ {
@@ -54,7 +58,7 @@ server {
     }
 
     # API and Django
-    location / {
+    location /api/ {
         proxy_pass http://django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -71,6 +75,11 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    # SPA fallback
+    location / {
+        try_files $uri /index.html;
     }
 
     # Prometheus metrics (internal only)
