--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework-simplejwt==5.3.1
 django-rest-knox==4.2.0
 PyJWT==2.8.0
 cryptography==41.0.7
+pyotp==2.9.0
 
 # Task Queue
 celery==5.3.4
@@ -33,6 +34,7 @@ drf-yasg==1.21.7
 drf-spectacular==0.27.0
 
 # Utilities
+setuptools==80.0.0
 python-dotenv==1.0.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
