stabilize logging, migrations, and nginx

--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,13 @@ db.sqlite3-journal
 /media
 /staticfiles
 /static
+ssl/
 
 # Environment variables
 .env
 .env.local
 .env.*.local
+.env.production
 
 # IDE
 .vscode/
