--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -14,6 +14,21 @@ server {
         add_header Content-Type text/plain;
     }
 
+    location = /metrics {
+        access_log off;
+        return 301 /metrics/;
+    }
+
+    location /metrics/ {
+        access_log off;
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
     # Redirect all other traffic to HTTPS
     location / {
         return 301 https://$host$request_uri;
