--- a/prometheus.yml
+++ b/prometheus.yml
@@ -10,12 +10,13 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'django'
-    static_configs:
-      - targets: ['backend:8000']
-    metrics_path: '/metrics/'
-    scrape_interval: 30s
-    scrape_timeout: 10s
+  # Django metrics disabled until a /metrics endpoint is exposed (e.g. django-prometheus).
+  # - job_name: 'django'
+  #   static_configs:
+  #     - targets: ['backend:8000']
+  #   metrics_path: '/metrics/'
+  #   scrape_interval: 30s
+  #   scrape_timeout: 10s
 
   - job_name: 'postgres'
     static_configs:
@@ -28,9 +29,10 @@ scrape_configs:
     static_configs:
       - targets: ['redis:6379']
 
-  - job_name: 'nginx'
-    static_configs:
-      - targets: ['nginx:80']
+  # Nginx metrics disabled (no metrics exporter configured).
+  # - job_name: 'nginx'
+  #   static_configs:
+  #     - targets: ['nginx:80']
 
 alerting:
   alertmanagers:
