--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ requests==2.31.0
 ldap3==2.9.1
 
 # Monitoring & Logging
+# Optional error reporting
 sentry-sdk==1.39.1
 django-debug-toolbar==4.2.0
 
